<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment"
    android:orientation="vertical"
    android:background="@drawable/main_bg">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_recipe"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        android:background="#D8D8D8"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_ingredients"
                android:textSize="20sp"
                android:textColor="#000000"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/search_bg"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/searchCuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_cuisine"
                android:textSize="20sp"
                android:padding="15dp"
                android:textColor="#000000"
                android:paddingStart="20dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/search_bg"/>

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/search"
                android:textSize="20sp"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
