<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeDietActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageButton
            android:id="@+id/backBtn5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dietary_preference"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/dietary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Multi-Select Spinner -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/selectDiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FCFCFC">

                    <TextView
                        android:id="@+id/tvDiets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="20sp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/select_dietary_preference" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/baseline_keyboard_arrow_down_24" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Confirm Button -->
            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#606060"
                android:textColor="#FFFFFF"
                android:text="@string/confirm"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>