<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FoldersFragment"
    android:background="@drawable/main_bg">

    <!-- User Profile Info -->
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/folderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <!-- Saved Recipe Collections -->
            <TextView
                android:id="@+id/tvSavedRecipesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_recipes"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- RecyclerView for Saved Recipe Folders -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/folders_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/tvSavedRecipesTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Timer Section -->
            <TextView
                android:id="@+id/tvTimersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/timers"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingTop="30dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/folders_recycler"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:id="@+id/timers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvTimersTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:timePickerMode="spinner"
                    android:background="@drawable/timer_bg"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tvCountdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counter"
                    android:textSize="45dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTimersTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"/>

                <!-- Timer Start, Stop, Delete buttons -->
                <LinearLayout
                    android:id="@+id/Buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btnStartTimer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/play_svgrepo_com__1_"
                        android:contentDescription="@string/start_timer"
                        android:padding="15dp" />

                    <Button
                        android:id="@+id/btnStopTimer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="15dp"
                        android:padding="15dp"
                        android:background="@drawable/stop_svgrepo_com"
                        android:contentDescription="@string/stop_timer"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/btnPauseTimer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/pause_svgrepo_com"
                        android:contentDescription="@string/pause_timer"
                        android:layout_marginStart="15dp"
                        android:padding="15dp"
                        android:visibility="gone"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>